[gd_scene load_steps=11 format=2]

[ext_resource path="res://shared_assets/pirata_one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/start_menu/start_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/start_menu/escape.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 0.109804, 0.109804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 84
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[node name="StartMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 1004.0
margin_bottom = 305.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 194.0
margin_right = 809.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 1 )
text = "Psychic Blade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 309.0
margin_right = 1004.0
margin_bottom = 439.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CenterContainer2"]
margin_left = 431.0
margin_right = 572.0
margin_bottom = 130.0

[node name="StartButton" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 141.0
margin_bottom = 63.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Start"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Label" parent="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 67.0
margin_right = 141.0
margin_bottom = 130.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="."]
margin_left = 10.0
margin_top = 558.0
margin_right = 45.0
margin_bottom = 590.0
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 4 )
text = "beta"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ControlsContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="PanelContainer" parent="ControlsContainer"]
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="ControlsContainer/Panel"]
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 570.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer3" type="CenterContainer" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 984.0
margin_bottom = 133.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer3"]
margin_left = 370.0
margin_right = 614.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 6 )
text = "Controls"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 984.0
margin_bottom = 535.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 211.0
margin_right = 772.0
margin_bottom = 398.0
__meta__ = {
"_edit_lock_": true
}

[node name="Move" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 561.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 7 )
text = "Move : WASD"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="SpinBlade" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 67.0
margin_right = 561.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 7 )
text = "Spin Blade: Left and Right"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="PushBlade" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 561.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 7 )
text = "Push and Pull Blade: Up and Down"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ReleaseBlade" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 561.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 7 )
text = "Release and Return Blade: Shift"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Zoom" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 268.0
margin_right = 561.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 7 )
text = "Zoom: Q and E"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Pause" type="Label" parent="ControlsContainer/Panel/MarginContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 335.0
margin_right = 561.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 7 )
text = "Pause: P"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ExitControlsButton" type="TextureButton" parent="ControlsContainer/Panel/MarginContainer"]
margin_left = 962.0
margin_top = 10.0
margin_right = 994.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="gui_input" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/StartButton" to="." method="_on_StartButton_gui_input"]
[connection signal="gui_input" from="MarginContainer/VBoxContainer/CenterContainer2/VBoxContainer/ControlsButton" to="." method="_on_ControlsButton_gui_input"]
[connection signal="pressed" from="ControlsContainer/Panel/MarginContainer/ExitControlsButton" to="." method="_on_ExitControlsButton_pressed"]
